<resources>
    <string name="app_name">dev.finances</string>
    <string name="entradas">Entradas</string>
    <string name="saidas">Saídas</string>
    <string name="total">Total</string>
    <string name="dev_finance">dev.finance$</string>
    <string name="nova_transac">Nova transação</string>
    <string name="consultar">Consultar Extratos</string>
    <string name="extratos">Extratos</string>
    <string name="money">R$ 00,00</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao_do_gasto">Descrição do gasto</string>
    <string name="gasto">Gasto</string>
    <string name="texto_dica">Utilize ponto para casas decimais\ne escolha entre Gasto ou Ganho</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>